force-app/main/default/objects/Presales__c/Presales__c.object-meta.xml
<CustomObject>
    <label>Presales</label>
    <nameField>
        <displayFormat>PST-{00000}</displayFormat>
        <label>Presales Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>