force-app/main/default/objects/Presales__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Presales</relationshipLabel>
    <relationshipName>Presales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>