force-app/main/default/objects/Presales__c/fields/ALM__c.field-meta.xml
<CustomField>
    <fullName>ALM__c</fullName>
    <label>ALM</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JIRA</fullName>
            </value>
            <value>
                <fullName>CA Agile</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>IBMRTC</fullName>
            </value>
            <value>
                <fullName>VersionOne</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>