force-app/main/default/objects/Presales__c/fields/ALM_Authentication__c.field-meta.xml
<CustomField>
    <fullName>ALM_Authentication__c</fullName>
    <label>ALM Authentication</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Auth</fullName>
            </value>
            <value>
                <fullName>Token-based</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>