force-app/main/default/objects/Presales__c/fields/ARM_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>ARM_Subscriptions__c</fullName>
    <formula>Opportunity_Name__r.Number_of_Product_Subscriptions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARM Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>