force-app/main/default/objects/Presales__c/fields/CI_Tool_currently_used__c.field-meta.xml
<CustomField>
    <fullName>CI_Tool_currently_used__c</fullName>
    <label>CI Tool currently used</label>
    <type>TextArea</type>
</CustomField>