force-app/main/default/objects/Presales__c/fields/Current_Challenges_Processes__c.field-meta.xml
<CustomField>
    <fullName>Current_Challenges_Processes__c</fullName>
    <inlineHelpText>Document as-is process and/or time taken for it.</inlineHelpText>
    <label>Current Challenges/Processes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>