force-app/main/default/objects/Presales__c/fields/Current_Data_Migration_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Data_Migration_Solution__c</fullName>
    <label>Current Data Migration Solution</label>
    <type>TextArea</type>
</CustomField>