force-app/main/default/objects/Presales__c/fields/Current_Deployment_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Deployment_Solution__c</fullName>
    <label>Current Deployment Solution</label>
    <type>TextArea</type>
</CustomField>