force-app/main/default/objects/Presales__c/fields/Current_IDE__c.field-meta.xml
<CustomField>
    <fullName>Current_IDE__c</fullName>
    <label>Current IDE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welkin Suite</fullName>
            </value>
            <value>
                <fullName>IntelliJ</fullName>
            </value>
            <value>
                <fullName>VS Code</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>