force-app/main/default/objects/Presales__c/fields/Current_Release_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Release_Process__c</fullName>
    <inlineHelpText>Capture branching strategy too.</inlineHelpText>
    <label>Current Release Process</label>
    <type>TextArea</type>
</CustomField>