force-app/main/default/objects/Presales__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery Call</fullName>
                <default>true</default>
                <label>Discovery Call</label>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Staged POC</fullName>
            </value>
            <value>
                <fullName>Custom POC</fullName>
            </value>
            <value>
                <fullName>Pilot/Implementation</fullName>
            </value>
            <value>
                <fullName>TAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>