force-app/main/default/objects/Presales__c/fields/Customer_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Timezone__c</fullName>
    <label>Customer Timezone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>