force-app/main/default/objects/Presales__c/fields/Detailed_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Use_Cases__c</fullName>
    <label>Detailed Use Cases</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>