force-app/main/default/objects/Presales__c/fields/Environments_brought_in_for_PoC__c.field-meta.xml
<CustomField>
    <fullName>Environments_brought_in_for_PoC__c</fullName>
    <inlineHelpText>Capture data + attachment size of each environment.</inlineHelpText>
    <label>Environments brought in for PoC</label>
    <type>TextArea</type>
</CustomField>