force-app/main/default/objects/Presales__c/fields/Existing_data_backup_solution__c.field-meta.xml
<CustomField>
    <fullName>Existing_data_backup_solution__c</fullName>
    <label>Existing data backup solution</label>
    <type>TextArea</type>
</CustomField>