force-app/main/default/objects/Presales__c/fields/Feature_Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Feature_Request_Description__c</fullName>
    <label>Feature Request Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>