force-app/main/default/objects/Presales__c/fields/Features_deployed_to_Prod__c.field-meta.xml
<CustomField>
    <fullName>Features_deployed_to_Prod__c</fullName>
    <inlineHelpText>Enter numeric value.</inlineHelpText>
    <label>#Features deployed to Prod</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>