force-app/main/default/objects/Presales__c/fields/Is_Customer_Data_Protected__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Data_Protected__c</fullName>
    <inlineHelpText>Enter the encryption platform used by customer.</inlineHelpText>
    <label>Is Customer Data Protected</label>
    <type>TextArea</type>
</CustomField>