force-app/main/default/objects/Presales__c/fields/Is_DX_used__c.field-meta.xml
<CustomField>
    <fullName>Is_DX_used__c</fullName>
    <label>Is DX used?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>