force-app/main/default/objects/Presales__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <label>Issue Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>