force-app/main/default/objects/Presales__c/fields/Issue_Enhancement_in__c.field-meta.xml
<CustomField>
    <fullName>Issue_Enhancement_in__c</fullName>
    <label>Issue/Enhancement in</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Log_a_Ticket_with__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>Vault</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>CodeScan</fullName>
            </value>
            <value>
                <fullName>Mulesoft</fullName>
            </value>
            <value>
                <fullName>RBM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>