force-app/main/default/objects/Presales__c/fields/Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Label_Name__c</fullName>
    <label>Label Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>