force-app/main/default/objects/Presales__c/fields/Label_Names__c.field-meta.xml
<CustomField>
    <fullName>Label_Names__c</fullName>
    <formula>IF(NOT(ISBLANK(  Label_Name__c  )),   Label_Name__c  , &apos;None&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label Names</label>
    <type>Text</type>
</CustomField>