force-app/main/default/objects/Presales__c/fields/Lines_of_Code__c.field-meta.xml
<CustomField>
    <fullName>Lines_of_Code__c</fullName>
    <inlineHelpText>Enter numeric value.</inlineHelpText>
    <label>Lines of Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>