force-app/main/default/objects/Presales__c/fields/Log_a_Ticket_with__c.field-meta.xml
<CustomField>
    <fullName>Log_a_Ticket_with__c</fullName>
    <label>Log a Ticket with</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT Help Desk</fullName>
            </value>
            <value>
                <fullName>PMT</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>