force-app/main/default/objects/Presales__c/fields/Managed_Packages__c.field-meta.xml
<CustomField>
    <fullName>Managed_Packages__c</fullName>
    <inlineHelpText>List the managed packages that the customer uses.</inlineHelpText>
    <label>Managed Packages</label>
    <type>TextArea</type>
</CustomField>