force-app/main/default/objects/Presales__c/fields/Mule_Hosting__c.field-meta.xml
<CustomField>
    <fullName>Mule_Hosting__c</fullName>
    <label>Mule Hosting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>On-Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>