force-app/main/default/objects/Presales__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Presales</relationshipLabel>
    <relationshipName>Presales_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>