force-app/main/default/objects/Presales__c/fields/Other_ALM_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Other_ALM_Authentication__c</fullName>
    <inlineHelpText>Enter when ALM Authentication is selected as &quot;Other&quot;.</inlineHelpText>
    <label>Other ALM Authentication</label>
    <length>50</length>
    <type>Text</type>
</CustomField>