force-app/main/default/objects/Presales__c/fields/Other_IDE__c.field-meta.xml
<CustomField>
    <fullName>Other_IDE__c</fullName>
    <inlineHelpText>Enter IDE when Current IDE is selected as &quot;Other&quot;.</inlineHelpText>
    <label>Other IDE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>