force-app/main/default/objects/Presales__c/fields/Other_SCA__c.field-meta.xml
<CustomField>
    <fullName>Other_SCA__c</fullName>
    <inlineHelpText>Enter when the SCA is selected as &quot;Other&quot;.</inlineHelpText>
    <label>Other SCA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>