force-app/main/default/objects/Presales__c/fields/Other_SSO__c.field-meta.xml
<CustomField>
    <fullName>Other_SSO__c</fullName>
    <description>Enter when SSO is selected as &quot;Other&quot;.</description>
    <label>Other SSO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>