force-app/main/default/objects/Presales__c/fields/Other_Storage_Environment__c.field-meta.xml
<CustomField>
    <fullName>Other_Storage_Environment__c</fullName>
    <inlineHelpText>Enter when Storage Environment is selected as &quot;Other&quot;.</inlineHelpText>
    <label>Other Storage Environment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>