force-app/main/default/objects/Presales__c/fields/Other_Test_Automation__c.field-meta.xml
<CustomField>
    <fullName>Other_Test_Automation__c</fullName>
    <inlineHelpText>Enter when Test Automation is selected as &quot;Other&quot;.</inlineHelpText>
    <label>Other Test Automation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>