force-app/main/default/objects/Presales__c/fields/Other_VCS_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Other_VCS_Authentication__c</fullName>
    <inlineHelpText>Enter VCS Authentication when the VCS Authentication selected is &quot;Other&quot;.</inlineHelpText>
    <label>Other VCS Authentication</label>
    <length>50</length>
    <type>Text</type>
</CustomField>