force-app/main/default/objects/Presales__c/fields/POC_Type__c.field-meta.xml
<CustomField>
    <fullName>POC_Type__c</fullName>
    <label>POC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer Data and Org</fullName>
            </value>
            <value>
                <fullName>Playground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>