force-app/main/default/objects/Presales__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>Select the Product applicable.</inlineHelpText>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>CodeScan</fullName>
            </value>
            <value>
                <fullName>Mulesoft</fullName>
            </value>
            <value>
                <fullName>RBM</fullName>
            </value>
            <value>
                <fullName>Vault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>