force-app/main/default/objects/Presales__c/fields/Product_Instance__c.field-meta.xml
<CustomField>
    <fullName>Product_Instance__c</fullName>
    <label>Product Instance</label>
    <length>15</length>
    <type>Text</type>
</CustomField>