force-app/main/default/objects/Presales__c/fields/Product_Instance_if_any__c.field-meta.xml
<CustomField>
    <fullName>Product_Instance_if_any__c</fullName>
    <formula>IF(NOT(ISBLANK(  Product_Instance__c  )),  Product_Instance__c  , &apos;None&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Instance if any</label>
    <type>Text</type>
</CustomField>