force-app/main/default/objects/Presales__c/fields/Repositories__c.field-meta.xml
<CustomField>
    <fullName>Repositories__c</fullName>
    <inlineHelpText>Enter numeric value.</inlineHelpText>
    <label># Repositories</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>