force-app/main/default/objects/Presales__c/fields/Salesforce_API_Call_Limit__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_API_Call_Limit__c</fullName>
    <inlineHelpText>Enter the API call limit per 24 hour period.</inlineHelpText>
    <label>Salesforce API Call Limit</label>
    <type>TextArea</type>
</CustomField>