force-app/main/default/objects/Presales__c/fields/Salesforce_clouds_used__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_clouds_used__c</fullName>
    <label>Salesforce clouds used</label>
    <type>TextArea</type>
</CustomField>