force-app/main/default/objects/Presales__c/fields/SCA__c.field-meta.xml
<CustomField>
    <fullName>SCA__c</fullName>
    <label>SCA</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CodeScan</fullName>
            </value>
            <value>
                <fullName>Checkmarx</fullName>
            </value>
            <value>
                <fullName>SonarQube</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>PMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>