force-app/main/default/objects/Presales__c/fields/Secondary_Solutions_Architect__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Solutions_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Solutions Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Presales_Secondary_Solutions_Architect</relationshipName>
    <type>Lookup</type>
</CustomField>