force-app/main/default/objects/Presales__c/fields/SF_Developers__c.field-meta.xml
<CustomField>
    <fullName>SF_Developers__c</fullName>
    <inlineHelpText>Enter numeric value.</inlineHelpText>
    <label># SF Developers</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>