force-app/main/default/objects/Presales__c/fields/SF_environments_to_be_scanned__c.field-meta.xml
<CustomField>
    <fullName>SF_environments_to_be_scanned__c</fullName>
    <inlineHelpText>Enter numeric value. Include both sandboxes and orgs.</inlineHelpText>
    <label># SF environments to be scanned</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>