force-app/main/default/objects/Presales__c/fields/Size_of_Largest_Org__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Largest_Org__c</fullName>
    <inlineHelpText>Capture size of data + attachments separately.</inlineHelpText>
    <label>Size of Largest Org</label>
    <type>TextArea</type>
</CustomField>