force-app/main/default/objects/Presales__c/fields/Solutions_Architect_Notes__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Architect_Notes__c</fullName>
    <inlineHelpText>Capture MoM for every call with customer.</inlineHelpText>
    <label>Solutions Architect Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>