force-app/main/default/objects/Presales__c/fields/Source_Control__c.field-meta.xml
<CustomField>
    <fullName>Source_Control__c</fullName>
    <label>Source Control</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Azure DevOps</fullName>
            </value>
            <value>
                <fullName>Bitbucket</fullName>
            </value>
            <value>
                <fullName>CodeCommit</fullName>
            </value>
            <value>
                <fullName>Github</fullName>
            </value>
            <value>
                <fullName>Gitlab</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SVN</fullName>
            </value>
            <value>
                <fullName>TFS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>