force-app/main/default/objects/Presales__c/fields/SSO__c.field-meta.xml
<CustomField>
    <fullName>SSO__c</fullName>
    <label>SSO</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Okta</fullName>
            </value>
            <value>
                <fullName>PingFederate</fullName>
            </value>
            <value>
                <fullName>ADFS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>