force-app/main/default/objects/Presales__c/fields/Storage_Environment_Hosting__c.field-meta.xml
<CustomField>
    <fullName>Storage_Environment_Hosting__c</fullName>
    <label>Storage Environment Hosting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Our Cloud</fullName>
            </value>
            <value>
                <fullName>Their network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>