force-app/main/default/objects/Presales__c/fields/Team_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Team_Orientation__c</fullName>
    <label>Team Orientation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Developers</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Release Manager</fullName>
            </value>
            <value>
                <fullName>Compliance Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>