force-app/main/default/objects/Presales__c/fields/Technical_Win__c.field-meta.xml
<CustomField>
    <fullName>Technical_Win__c</fullName>
    <inlineHelpText>Select this checkbox if the product can solve for customer&apos;s technical requirement.</inlineHelpText>
    <label>Technical Win</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>