force-app/main/default/objects/Presales__c/fields/Test_Automation__c.field-meta.xml
<CustomField>
    <fullName>Test_Automation__c</fullName>
    <label>Test Automation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selenium</fullName>
            </value>
            <value>
                <fullName>Provar</fullName>
            </value>
            <value>
                <fullName>AccelQ</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>